--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "vite": "4.3.5",
     "vite-tsconfig-paths": "4.2.0",
     "wrangler": "^2.20.0"
+  },
+  "dependencies": {
+    "qwik-image": "^0.0.6"
   }
 }
